Fix dark mode link colour

--- a/src/BenChiverton.Blog/Resources/ResourceSummary.razor.css
+++ b/src/BenChiverton.Blog/Resources/ResourceSummary.razor.css
@@ -15,7 +15,7 @@
 
 .download-link, .resource-link {
     cursor: pointer;
-    color: -webkit-link
+    color: var(--link-color);
 }
 
     .download-link:hover, .resource-link:hover {
